# Tic-Tac-Toe

./: README.md  pyproject.toml
src/tictactoe/: __init__.py  __main__.py  ai.py  constants.py  game.py  gui.py
tests/: test_game.py
